[gd_scene load_steps=9 format=2]

[ext_resource path="res://Character.tscn" type="PackedScene" id=1]
[ext_resource path="res://DemoScene.gd" type="Script" id=2]
[ext_resource path="res://pompy-mini.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Camera2D.gd" type="Script" id=4]
[ext_resource path="res://Object01.tscn" type="PackedScene" id=5]
[ext_resource path="res://ArrowHUD.tscn" type="PackedScene" id=6]

[sub_resource type="DynamicFont" id=1]
size = 8
font_data = ExtResource( 3 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[node name="DemoScene" type="Node"]
script = ExtResource( 2 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="DebugLabel1" type="Label" parent="CanvasLayer"]
margin_right = 8.0
margin_bottom = 15.0
theme = SubResource( 2 )
custom_constants/line_spacing = -6
text = "inputs: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DebugLabel2" type="Label" parent="CanvasLayer"]
margin_left = -0.396858
margin_top = 9.52441
margin_right = 24.6031
margin_bottom = 24.5244
theme = SubResource( 2 )
custom_constants/line_spacing = -6
text = "timer"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="YSort" type="YSort" parent="."]

[node name="Object01" parent="YSort" instance=ExtResource( 5 )]
position = Vector2( 60, -11 )

[node name="Object02" parent="YSort" instance=ExtResource( 5 )]
position = Vector2( 100, 55 )

[node name="Object03" parent="YSort" instance=ExtResource( 5 )]
position = Vector2( -80, 55 )

[node name="Object04" parent="YSort" instance=ExtResource( 5 )]
position = Vector2( 0, -33 )

[node name="Character" parent="YSort" groups=[
"receive_constants",
] instance=ExtResource( 1 )]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 10, 11 )
current = true
script = ExtResource( 4 )

[node name="ArrowHUD" parent="." instance=ExtResource( 6 )]
